# autologexplain

./: .env.example  .gitignore  README.md  package-lock.json  terraform.tfstate
analytics/: .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py  mypy.ini  pyproject.toml  requirements.txt
analytics/core/: agent.py
analytics/core/db/: database.py
analytics/core/tools/: profiler_tool.py  specialized_tools.py  sql_query_tool.py
analytics/utils/: config.py  token_manager.py
backend/: .env.example  .gitignore  Dockerfile  celery_worker.py  docker-compose.yaml  main.py  pyproject.toml  readme.md  requirements.txt  schema.py
backend/api/: analysis.py  chats.py  forecasting.py  incidents.py  logs.py  rca.py  ws.py
backend/core/: config.py
backend/db/: db.py  storage.py
backend/repo/: docker-compose.yml  dockerfile  requirements.txt
backend/repo/clickhouse_data/: status  uuid
backend/repo/clickhouse_data/data/default/: logs
backend/repo/clickhouse_data/data/system/: asynchronous_metric_log  error_log  metric_log  part_log  processors_profile_log  query_log  text_log  trace_log
backend/repo/clickhouse_data/metadata/: default  default.sql  system  system.sql
backend/repo/clickhouse_data/preprocessed_configs/: users.xml
backend/repo/clickhouse_data/store/11e/11e9095f-ba6f-4f69-adf3-8724fddaf9c7/202508_10_10_0/: checksums.txt  data.cmrk3  primary.cidx  serialization.json
backend/repo/clickhouse_data/store/11e/11e9095f-ba6f-4f69-adf3-8724fddaf9c7/202508_11_11_0/: checksums.txt  data.cmrk3  primary.cidx  serialization.json
backend/repo/clickhouse_data/store/11e/11e9095f-ba6f-4f69-adf3-8724fddaf9c7/202508_12_12_0/: checksums.txt  data.cmrk3  primary.cidx  serialization.json
backend/repo/clickhouse_data/store/11e/11e9095f-ba6f-4f69-adf3-8724fddaf9c7/202508_13_13_0/: checksums.txt  data.cmrk3  primary.cidx  serialization.json
backend/repo/clickhouse_data/store/11e/11e9095f-ba6f-4f69-adf3-8724fddaf9c7/202508_14_14_0/: checksums.txt  data.cmrk3  primary.cidx  serialization.json
backend/repo/clickhouse_data/store/11e/11e9095f-ba6f-4f69-adf3-8724fddaf9c7/202508_15_15_0/: checksums.txt  data.cmrk3  primary.cidx  serialization.json
backend/repo/clickhouse_data/store/11e/11e9095f-ba6f-4f69-adf3-8724fddaf9c7/202508_16_16_0/: checksums.txt  data.cmrk3  primary.cidx  serialization.json
backend/repo/clickhouse_data/store/11e/11e9095f-ba6f-4f69-adf3-8724fddaf9c7/202508_17_17_0/: checksums.txt  data.cmrk3  primary.cidx  serialization.json
backend/repo/clickhouse_data/store/11e/11e9095f-ba6f-4f69-adf3-8724fddaf9c7/202508_18_18_0/: checksums.txt  data.cmrk3  primary.cidx  serialization.json
backend/repo/clickhouse_data/store/11e/11e9095f-ba6f-4f69-adf3-8724fddaf9c7/202508_19_19_0/: checksums.txt  data.cmrk3  primary.cidx  serialization.json
backend/repo/clickhouse_data/store/11e/11e9095f-ba6f-4f69-adf3-8724fddaf9c7/202508_1_11_2/: checksums.txt  data.cmrk3  primary.cidx  serialization.json
backend/repo/clickhouse_data/store/11e/11e9095f-ba6f-4f69-adf3-8724fddaf9c7/202508_1_16_3/: checksums.txt  data.cmrk3  primary.cidx  serialization.json
backend/repo/clickhouse_data/store/11e/11e9095f-ba6f-4f69-adf3-8724fddaf9c7/202508_1_1_0/: checksums.txt  data.cmrk3  primary.cidx  serialization.json
backend/repo/clickhouse_data/store/11e/11e9095f-ba6f-4f69-adf3-8724fddaf9c7/202508_1_21_4/: checksums.txt  data.cmrk3  primary.cidx  serialization.json
backend/repo/clickhouse_data/store/11e/11e9095f-ba6f-4f69-adf3-8724fddaf9c7/202508_1_6_1/: checksums.txt  data.cmrk3  primary.cidx  serialization.json
backend/repo/clickhouse_data/store/11e/11e9095f-ba6f-4f69-adf3-8724fddaf9c7/202508_20_20_0/: checksums.txt  data.cmrk3  primary.cidx  serialization.json
backend/repo/clickhouse_data/store/11e/11e9095f-ba6f-4f69-adf3-8724fddaf9c7/202508_21_21_0/: checksums.txt  data.cmrk3  primary.cidx  serialization.json
backend/repo/clickhouse_data/store/11e/11e9095f-ba6f-4f69-adf3-8724fddaf9c7/202508_22_22_0/: checksums.txt  data.cmrk3  primary.cidx  serialization.json
backend/repo/clickhouse_data/store/a95/a95a5c58-03c3-4e53-a969-b0c9562639ba/: asynchronous_metric_log.sql  error_log.sql  metric_log.sql  part_log.sql  processors_profile_log.sql  query_log.sql  text_log.sql  trace_log.sql
backend/repo/clickhouse_data/store/acf/acf0fde1-7641-4b89-9904-ef3fc1f2ccf4/: logs.sql
backend/repo/data/: logs_sample.csv
backend/repo/db/init/: 01_schema.sql  02_load_csv.sql  entrypoint.sh
backend/repo/src/clickhouse_logs/: config.py  db.py  main.py  schema.py  utils.py
backend/repo/tests/: test_endpoints.py
backend/services/: README.md  anomaly_detector.py  ch_service.py  dependency_graph.py  incident_manager.py  llm_service.py  log_clustering.py  log_fingerprints.py  log_tags.py  rca_engine.py  slo_tracker.py  tokens.py  utils.py
backend/services/forecasting/: README.md  __init__.py  explainer.py  features.py  predictor.py  trainer.py
backend/services/forecasting/models/: forecaster_metrics.json
backend/services/incidents/: __init__.py  constants.py  engine.py  redis_cache.py  repository.py  schema.py  utils.py
backend/services/postmortem/: README.md  __init__.py  generator.py
backend/services/signals/: __init__.py  engine.py  repository.py  schema.py  state.py
backend/services/similar_incidents/: README.md  __init__.py  scoring.py
backend/tests/: conftest.py  test_store.py
backend/tests/unit/api/: test_incidents_api.py  test_logs_list.py
backend/tests/unit/db/: test_db.py  test_storage.py
backend/tests/unit/services/: conftest.py  test_anomaly_detector.py  test_dependency_graph.py  test_forecasting_features.py  test_incident_manager.py  test_incidents_utils.py  test_issue_token.py  test_log_clustering.py  test_log_fingerprints.py  test_log_tags.py  test_postmortem.py  test_similar_incidents.py  test_slo_tracker.py  test_utils.py  test_verify_chat_token.py
backend/tests/unit/services/signals/: test_engine.py  test_repository.py  test_schema.py  test_state.py
backend/tests/unit/services/tokens/: test_issue_token.py  test_verify_chat_token.py
(+592 files in other folders)
