[tool.poetry]
name = "autolog-analytics"
version = "0.1.0"
description = "CLI/agent for log analysis over ClickHouse (mirrors backend tooling)"
authors = ["You <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
# Core analytics deps (перенесены из requirements.txt)
langchain = "*"
langchain-openai = "*"
langchain-community = "*"
langchain-experimental = "*"
langchain-openrouter = "*"
clickhouse-connect = "*"
pydantic = "<2"
python-dotenv = "*"
pandas = "*"
lark = "*"

[tool.poetry.group.dev.dependencies]
ruff = "*"
mypy = "*"
pytest = "^8.3"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
httpx = "^0.28"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","I","N","UP","B","SIM"]
ignore = ["E203"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
plugins = ["pydantic.mypy"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
  "langchain",
  "langchain.*",
  "clickhouse_connect",
  "pandas",
  "dotenv",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint.per-file-ignores]
"core/agent.py" = ["E501"]
"core/tools/*.py" = ["E501"]
"main.py" = ["E501"]
