[tool.poetry]
name = "autolog"
version = "0.1.0"
description = "FastAPI + Celery + Redis + ClickHouse (без Postgres)"
authors = ["You <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
celery = "*"
redis = "*"
httpx = "*"
requests = "*"
loguru = "*"
python-dotenv = "*"

[tool.poetry.group.dev.dependencies]
ruff = "*"
mypy = "*"
pytest = "^8.3"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
httpx = "^0.28"

[tool.poetry.scripts]
api = "uvicorn main:app --host 0.0.0.0 --port 8080"
worker = "celery -A celery_worker.celery_app worker --loglevel=INFO --concurrency=2 -E"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","I","UP","B","SIM","ASYNC","TRY"]
ignore = ["E501"]

[tool.mypy]
packages = ["backend"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
  "redis",
  "redis.*",
  "fastapi",
  "fastapi.*",
  "loguru",
  "celery",
  "celery.*",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

